--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<html>
+<html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alonzo Cuela</title>
     </head>
     <body>
@@ -9,6 +11,24 @@
                 text-align: center;
             }
         </style>
-        <h1 class="centrar">Bienvenido a mi pagina web</h1>
+        <header>
+            <h1 class="centrar">Bienvenido a mi pagina web</h1>
+            <table>
+                <tr>
+                    <nav>
+                        <ul>
+                            <li><a href="#sobremi">Un poco sobre mí</a></li>
+                        </ul>
+                    </nav>
+                </tr>
+            </table>
+        </header>
+        <section id="sobremi">
+            <h1>Unpoco sobre mí</h1>
+            <p><h2>Soy Alonzo Estéfano Cuela Rodríguez, alumno de la <a href="https://ucsp.edu.pe">"Universidad Catolica San Pablo"</a> en Arequipa-Perú, donde curso la carrera de Ciencias de la Computación,
+            curse el colegio en <a href="https://www.facebook.com/colegioreydereyes/?locale=es_LA">"IEP Rey de Reyes"</a>, soy alguien con interes en el desarrollo de videojuegos de manera independiente 
+            con la idea de empezar mi propio estudio de desarrollo de videojuegos proyecto al cual denomino <a href="skull33.github.io">"Skull Studios"</a> donde ya estoy desarrolando una pagina web un poco más amplia,
+            respecto a su desarrollo</h2></p>
+        </section>
     </body>
 </html>
