--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Unpoco sobre mí</h1>
             <p><h2>Soy Alonzo Estéfano Cuela Rodríguez, alumno de la <a href="https://ucsp.edu.pe">"Universidad Catolica San Pablo"</a> en Arequipa-Perú, donde curso la carrera de Ciencias de la Computación,
             curse el colegio en <a href="https://www.facebook.com/colegioreydereyes/?locale=es_LA">"IEP Rey de Reyes"</a>, soy alguien con interes en el desarrollo de videojuegos de manera independiente 
-            con la idea de empezar mi propio estudio de desarrollo de videojuegos proyecto al cual denomino <a href="skull33.github.io">"Skull Studios"</a> donde ya estoy desarrolando una pagina web un poco más amplia,
+            con la idea de empezar mi propio estudio de desarrollo de videojuegos proyecto al cual denomino <a href="https://skull33.github.io">"Skull Studios"</a> donde ya estoy desarrolando una pagina web un poco más amplia,
             respecto a su desarrollo</h2></p>
         </section>
     </body>
