--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alonzo Cuela</title>
+        <meta name="descripción" content="Página web oficial de Alonzo Estéfano Cuela Rodríguez, estudiante de Ciencias de la Computación en la Universidad Catolica San Pablo (UCSP). Conoce más sobre mis proyectos.">
+        <meta name="keywords" content="Alonzo Estéfano Cuela Rodríguez, Ciencias de la Computación, Universidad Catolica San Pablo, Proyectos, UCSP">
     </head>
     <body>
         <style>
@@ -18,6 +20,7 @@
                     <nav>
                         <ul>
                             <li><a href="#sobremi">Un poco sobre mí</a></li>
+                            <li><a href="#proyectos">Mis Proyectos</a></li>
                         </ul>
                     </nav>
                 </tr>
@@ -27,8 +30,16 @@
             <h1>Un poco sobre mí</h1>
             <p><h2>Soy Alonzo Estéfano Cuela Rodríguez, alumno de la <a href="https://ucsp.edu.pe">"Universidad Catolica San Pablo"</a> en Arequipa-Perú, donde curso la carrera de Ciencias de la Computación,
             curse el colegio en <a href="https://www.facebook.com/colegioreydereyes/?locale=es_LA">"IEP Rey de Reyes"</a>, soy alguien con interes en el desarrollo de videojuegos de manera independiente 
-            con la idea de empezar mi propio estudio de desarrollo de videojuegos proyecto al cual denomino <a href="https://skull33.github.io">"Skull Studios"</a> donde ya estoy desarrolando una pagina web un poco más amplia,
-            respecto a su desarrollo</h2></p>
+            con la idea de empezar mi propio estudio de desarrollo de videojuegos proyecto al cual denomino <a href="https://skull33.github.io">"Skull Studios"</a> donde ya estoy desarrollando una pagina web un poco más amplia,
+            respecto a su desarrollo.</h2></p>
+        </section>
+        <section id="proyectos">
+            <h1>Mis Proyectos</h1>
+            <p><h2>Como mencione en el punto anterior, el estudio es un proyecto a largo plazo que estoy realizando, <a href="https://skull33.github.io">"Skull Studios"</a> además cuanta con otros proyectos en mente
+            como "Unslayed Death", un videojuego de zombies que estoy desarrollando con el nombre del estudio con el plan de consolidarme como desarrollador en esta industria,
+            tambien tengo otro proyecyo que desarrrolle para una Game Jam que de dio a cabo en la universidad en noviembre del 2023 en la cual fui ganador de ese pequeño evento
+            con la tematica de "volver atrás" presento <a href="https://github.com/Dnursaurio/Welcome-Back">"Welcome Back"</a> un juego pequeño que inicio con el nombre de "Behind the Clock", pero durante el corto desarrollo del proyecto cambie el nombre al juego aunque no logre cambiarle el nombre
+            al archivo ejecutable por eso si lo descargas en los archivos encontraras el ".exe" como "Behind the Clock".</h2></p>
         </section>
     </body>
 </html>
