--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Alonzo Cuela</title>
         <meta name="descripción" content="Página web oficial de Alonzo Estéfano Cuela Rodríguez, estudiante de Ciencias de la Computación en la Universidad Catolica San Pablo (UCSP). Conoce más sobre mis proyectos.">
         <meta name="keywords" content="Alonzo Estéfano Cuela Rodríguez, Ciencias de la Computación, Universidad Catolica San Pablo, Proyectos, UCSP">
+        <meta name="author" content="Alonzo Estéfano Cuela Rodríguez">
     </head>
     <body>
         <style>
