--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                         <ul>
                             <li><a href="#sobremi">Un poco sobre mí</a></li>
                             <li><a href="#proyectos">Mis Proyectos</a></li>
+                            <li><a href="#redes">Mis Redes Sociales</a></li>
+                            <li><a href="#contacts">Compañeros y relacionados</a></li>
                         </ul>
                     </nav>
                 </tr>
@@ -39,8 +41,30 @@
             <p><h2>Como mencione en el punto anterior, el estudio es un proyecto a largo plazo que estoy realizando, <a href="https://skull33.github.io">"Skull Studios"</a> además cuanta con otros proyectos en mente
             como "Unslayed Death", un videojuego de zombies que estoy desarrollando con el nombre del estudio con el plan de consolidarme como desarrollador en esta industria,
             tambien tengo otro proyecyo que desarrrolle para una Game Jam que de dio a cabo en la universidad en noviembre del 2023 en la cual fui ganador de ese pequeño evento
-            con la tematica de "volver atrás" presento <a href="https://github.com/Dnursaurio/Welcome-Back">"Welcome Back"</a> un juego pequeño que inicio con el nombre de "Behind the Clock", pero durante el corto desarrollo del proyecto cambie el nombre al juego aunque no logre cambiarle el nombre
+            con la tematica de "volver atrás" presentó <a href="https://github.com/Dnursaurio/Welcome-Back">"Welcome Back"</a> un juego pequeño que inicio con el nombre de "Behind the Clock", pero durante el corto desarrollo del proyecto cambie el nombre al juego aunque no logre cambiarle el nombre
             al archivo ejecutable por eso si lo descargas en los archivos encontraras el ".exe" como "Behind the Clock".</h2></p>
+        </section>
+        <section id="redes">
+            <h1>Mis Redes Sociales</h1>
+            <ul>
+                <li><a href="https://www.youtube.com/channel/UCF6sYbHi-ICwk7s1QyJDREg">"Mi canal de YT"</a> (el de mi estudio de gamedev)</li>
+                <li><a href="https://www.instagram.com/skullstds/">"La cuenta de IG de Skull Studios"</a></li>
+                <li>puedes contactarme al correo de SS: "sku11stds@gmail.com"</li>
+            </ul>
+        </section>
+        <section id="contacts">
+            <h1> Compañeros y relacionados</h1>
+            <ul>
+                <li><a href="https://nayemymurillo.github.io/NayemyMurilloRivera.github.io/">"Nayemy Murillo Rivera"</a></li>
+                <li><a href="https://astridjudithhuarcayalizarraga.000webhostapp.com"></a>"Astrid Judith Huarcalla Lizarraga"</li>
+                <li><a href="https://gianellaarianarosaslipa.000webhostapp.com"></a>"Gianella Ariana Rosas Lipa"</li>
+                <li><a href="https://pochano.github.io"></a>"José Miguel Mateo Valdivia Castillo"</li>
+                <li><a href="https://mariadelosangelesvasquezpineda.github.io"></a>"María De Los Angeles Vasquez Pineda"</li>
+                <li><a href=""></a>"Betzabe Delia Huaroc Vargas"</li>
+
+            </ul>
+            </ul>
+            
         </section>
     </body>
 </html>
