mi pagina v0.06 update

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <h1> Compañeros y relacionados</h1>
             <ul>
                 <li><a href="https://nayemymurillo.github.io/NayemyMurilloRivera.github.io/">"Nayemy Murillo Rivera"</a></li>
-                <li><a href="https://astridjudithhuarcayalizarraga.000webhostapp.com"></a>"Astrid Judith Huarcalla Lizarraga"</li>
-                <li><a href="https://gianellaarianarosaslipa.000webhostapp.com"></a>"Gianella Ariana Rosas Lipa"</li>
-                <li><a href="https://pochano.github.io"></a>"José Miguel Mateo Valdivia Castillo"</li>
-                <li><a href="https://mariadelosangelesvasquezpineda.github.io"></a>"María De Los Angeles Vasquez Pineda"</li>
-                <li><a href=""></a>"Betzabe Delia Huaroc Vargas"</li>
+                <li><a href="https://astridjudithhuarcayalizarraga.000webhostapp.com">"Astrid Judith Huarcalla Lizarraga"</a></li>
+                <li><a href="https://gianellaarianarosaslipa.000webhostapp.com">"Gianella Ariana Rosas Lipa"</a></li>
+                <li><a href="https://pochano.github.io">"José Miguel Mateo Valdivia Castillo"</a></li>
+                <li><a href="https://mariadelosangelesvasquezpineda.github.io">"María De Los Angeles Vasquez Pineda"</a></li>
+                <li><a href="https://betzabedhv.github.io">"Betzabe Delia Huaroc Vargas"</a></li>
 
             </ul>
             </ul>
