--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         </section>
         <section id="proyectos">
             <h1>Mis Proyectos</h1>
-            <p><h2>Como mencione en el punto anterior, el estudio es un proyecto a largo plazo que estoy realizando, <a href="https://skull33.github.io">"Skull Studios"</a> además cuanta con otros proyectos en mente
+            <p><h2>Como mencione en el punto anterior, el estudio es un proyecto a largo plazo que estoy realizando, <a href="https://skull33.github.io">"Skull Studios"</a> además cuenta con otros proyectos en mente
             como "Unslayed Death", un videojuego de zombies que estoy desarrollando con el nombre del estudio con el plan de consolidarme como desarrollador en esta industria,
-            tambien tengo otro proyecyo que desarrrolle para una Game Jam que de dio a cabo en la universidad en noviembre del 2023 en la cual fui ganador de ese pequeño evento
-            con la tematica de "volver atrás" presentó <a href="https://github.com/Dnursaurio/Welcome-Back">"Welcome Back"</a> un juego pequeño que inicio con el nombre de "Behind the Clock", pero durante el corto desarrollo del proyecto cambie el nombre al juego aunque no logre cambiarle el nombre
+            tambien tengo otro proyecto que desarrolle para una Game Jam que de dió a cabo en la universidad en noviembre del 2023 en la cual fui ganador de ese pequeño evento
+            con la temática de "volver atrás" presentó <a href="https://github.com/Dnursaurio/Welcome-Back">"Welcome Back"</a> un juego pequeño que inicio con el nombre de "Behind the Clock", pero durante el corto desarrollo del proyecto cambie el nombre al juego aunque no logre cambiarle el nombre
             al archivo ejecutable por eso si lo descargas en los archivos encontraras el ".exe" como "Behind the Clock".</h2></p>
         </section>
         <section id="redes">
