--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li><a href="https://gianellaarianarosaslipa.000webhostapp.com">"Gianella Ariana Rosas Lipa"</a></li>
                 <li><a href="https://pochano.github.io">"José Miguel Mateo Valdivia Castillo"</a></li>
                 <li><a href="https://mariadelosangelesvasquezpineda.github.io">"María De Los Angeles Vasquez Pineda"</a></li>
-                <li><a href="https://betzabehuarocvargas.github.io/betzabehuarocvargas.html">"Betzabe Delia Huaroc Vargas"</a></li>
+                <li><a href="https://betzabehuarocvargas.github.io">"Betzabe Delia Huaroc Vargas"</a></li>
 
             </ul>
         </section>
