--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 <li><a href="https://pochano.github.io">"José Miguel Mateo Valdivia Castillo"</a></li>
                 <li><a href="https://mariadelosangelesvasquezpineda.github.io">"María De Los Angeles Vasquez Pineda"</a></li>
                 <li><a href="https://betzabehuarocvargas.github.io">"Betzabe Delia Huaroc Vargas"</a></li>
-
+                <li><a href="https://betzabehuarocvargas.github.io"></a>Adriana Fernanda Rodríguez Zuñiga</li>
+                <li><a href="https://aleshka18.github.io/aleshkabeltran/"></a>Aleshka Nicole Beltrán Gutiérrez</li>
             </ul>
         </section>
     </body>
