--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alonzo Cuela</title>
         <meta name="descripción" content="Página web oficial de Alonzo Estéfano Cuela Rodríguez, estudiante de Ciencias de la Computación en la Universidad Catolica San Pablo (UCSP). Conoce más sobre mis proyectos.">
-        <meta name="keywords" content="Alonzo Estéfano Cuela Rodríguez, Ciencias de la Computación, Universidad Catolica San Pablo, Proyectos, UCSP">
+        <meta name="keywords" content="Alonzo, Estefano, Cuela, Rodriguez, Ciencias de la Computacion, Universidad Catolica San Pablo, UCSP">
         <meta name="author" content="Alonzo Estéfano Cuela Rodríguez">
     </head>
     <body>
