mi pagina v0.06 u´date_alpha0.01

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <li><a href="https://pochano.github.io">"José Miguel Mateo Valdivia Castillo"</a></li>
                 <li><a href="https://mariadelosangelesvasquezpineda.github.io">"María De Los Angeles Vasquez Pineda"</a></li>
                 <li><a href="https://betzabehuarocvargas.github.io">"Betzabe Delia Huaroc Vargas"</a></li>
-                <li><a href="https://betzabehuarocvargas.github.io">Adriana Fernanda Rodríguez Zuñiga</a></li>
+                <li><a href="https://adrianarz7.github.io/AdrianaRz.github.io/">Adriana Fernanda Rodríguez Zuñiga</a></li>
                 <li><a href="https://aleshka18.github.io/aleshkabeltran/">Aleshka Nicole Beltrán Gutiérrez</a></li>
             </ul>
         </section>
