--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li><a href="https://betzabehuarocvargas.github.io">"Betzabe Delia Huaroc Vargas"</a></li>
                 <li><a href="https://adrianarz7.github.io/AdrianaRz.github.io/">Adriana Fernanda Rodríguez Zuñiga</a></li>
                 <li><a href="https://aleshka18.github.io/aleshkabeltran/">Aleshka Nicole Beltrán Gutiérrez</a></li>
+                <li><a href="https://josuemontenegro.com/">Josué David Montenegro Salazar</a></li>
             </ul>
         </section>
     </body>
